--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -8,7 +8,7 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/Машины букеты/css/style.css">
 	<title>Машины сладкие букеты</title>
 </head>
 
@@ -20,7 +20,7 @@
 			<div class="container">
 
 				<a class="logo navbar-brand" href="#">
-					<img class="nav_logo" src="/img/IMG-20201021-WA0026 copy.jpg" alt="Logo">
+					<img class="nav_logo" src="/Машины букеты/img/IMG-20201021-WA0026 copy.jpg" alt="Logo">
 					Машины сладкие букеты
 				</a>
 
@@ -124,13 +124,13 @@
 
 			<div class="carousel-inner heightImg">
 				<div class="carousel-item itemImg active ">
-					<img src="/img/IMG-20201021-WA0003.jpg" class="d-block w-100 " alt="...">
+					<img src="/Машины букеты/img/IMG-20201021-WA0002.jpg" class="d-block w-100 " alt="...">
 				</div>
 				<div class="carousel-item itemImg">
-					<img src="/img/IMG-20201021-WA0004.jpg" class="d-block w-100 " alt="...">
+					<img src="/Машины букеты/img/IMG-20201021-WA0004.jpg" class="d-block w-100 " alt="...">
 				</div>
 				<div class="carousel-item itemImg">
-					<img src="/img/IMG-20201021-WA0006.jpg" class="d-block w-100 " alt="...">
+					<img src="/Машины букеты/img/IMG-20201021-WA0006.jpg" class="d-block w-100 " alt="...">
 				</div>
 			</div>
 
@@ -322,7 +322,7 @@
 				<div class="col-lg-4">
 
 					<div class="customerAva">
-						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
+						<img class="Ava" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" alt="Ava">
 					</div>
 
 					<h2>Heading</h2>
@@ -335,7 +335,7 @@
 				<div class="col-lg-4">
 
 					<div class="customerAva">
-						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
+						<img class="Ava" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" alt="Ava">
 					</div>
 
 					<h2>Heading</h2>
@@ -348,7 +348,7 @@
 				<div class="col-lg-4">
 
 					<div class="customerAva">
-						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
+						<img class="Ava" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" alt="Ava">
 					</div>
 
 					<h2>Heading</h2>
