--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -38,11 +38,9 @@
 						</li>
 
 						<li class="nav_drop nav-item dropdown">
-
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Портфолио
 							</a>
-
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="#">Сладкие букеты</a>
 								<a class="dropdown-item" href="#">Подарочные наборы</a>
@@ -58,7 +56,7 @@
 
 					<!-- Button trigger modal -->
 					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-						Launch demo modal
+						Задай вопрос
 					</button>
 
 					<!-- Modal -->
@@ -89,10 +87,6 @@
 
 									</form>
 								</div>
-
-
-
-
 								<div class="modal-footer">
 									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 									<button type="button" class="btn btn-primary">Save changes</button>
@@ -112,9 +106,6 @@
 	</div>
 
 	<div class="carus">
-
-
-
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators ol">
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -133,19 +124,7 @@
 					<img src="/Машины букеты/img/IMG-20201021-WA0006.jpg" class="d-block w-100 " alt="...">
 				</div>
 			</div>
-
-			<!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a> -->
 		</div>
-
-
-
 	</div>
 
 
@@ -159,144 +138,107 @@
 
 					<div class="col-md-4">
 						<div class="card mb-4 shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-								xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-								role="img" aria-label="Placeholder: Thumbnail">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-									dy=".3em">Thumbnail</text>
-							</svg>
+							<img class="cardImg" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
 							<div class="card-body">
 								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 									additional content. This content is a little bit longer.</p>
 
 								<div class="d-flex justify-content-between align-items-center">
 
-									<div class="btn">
+									<div class="btn btnCard">
 										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									</div>
-
-									<small class="text-muted">9 mins</small>
 								</div>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-4">
 						<div class="card mb-4 shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-								xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-								role="img" aria-label="Placeholder: Thumbnail">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-									dy=".3em">Thumbnail</text>
-							</svg>
+							<img class="cardImg" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
 							<div class="card-body">
 								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 									additional content. This content is a little bit longer.</p>
 
 								<div class="d-flex justify-content-between align-items-center">
 
-									<div class="btn">
+									<div class="btn btnCard">
 										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									</div>
-
-									<small class="text-muted">9 mins</small>
 								</div>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-4">
 						<div class="card mb-4 shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-								xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-								role="img" aria-label="Placeholder: Thumbnail">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-									dy=".3em">Thumbnail</text>
-							</svg>
+							<img class="cardImg" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
 							<div class="card-body">
 								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 									additional content. This content is a little bit longer.</p>
 
 								<div class="d-flex justify-content-between align-items-center">
 
-									<div class="btn">
+									<div class="btn btnCard">
 										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									</div>
-
-									<small class="text-muted">9 mins</small>
 								</div>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-4">
 						<div class="card mb-4 shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-								xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-								role="img" aria-label="Placeholder: Thumbnail">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-									dy=".3em">Thumbnail</text>
-							</svg>
+							<img class="cardImg" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
 							<div class="card-body">
 								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 									additional content. This content is a little bit longer.</p>
 
 								<div class="d-flex justify-content-between align-items-center">
 
-									<div class="btn">
+									<div class="btn btnCard">
 										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									</div>
-
-									<small class="text-muted">9 mins</small>
 								</div>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-4">
 						<div class="card mb-4 shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-								xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-								role="img" aria-label="Placeholder: Thumbnail">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-									dy=".3em">Thumbnail</text>
-							</svg>
+							<img class="cardImg" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
 							<div class="card-body">
 								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 									additional content. This content is a little bit longer.</p>
 
 								<div class="d-flex justify-content-between align-items-center">
 
-									<div class="btn">
+									<div class="btn btnCard">
 										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									</div>
-
-									<small class="text-muted">9 mins</small>
 								</div>
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-4">
 						<div class="card mb-4 shadow-sm">
-							<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-								xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-								role="img" aria-label="Placeholder: Thumbnail">
-								<title>Placeholder</title>
-								<rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
-									dy=".3em">Thumbnail</text>
-							</svg>
+							<img class="cardImg" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
 							<div class="card-body">
 								<p class="card-text">This is a wider card with supporting text below as a natural lead-in to
 									additional content. This content is a little bit longer.</p>
 
 								<div class="d-flex justify-content-between align-items-center">
 
-									<div class="btn">
+									<div class="btn btnCard">
 										<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
 									</div>
-
-									<small class="text-muted">9 mins</small>
 								</div>
 							</div>
 						</div>
@@ -307,8 +249,6 @@
 			</div>
 
 		</div>
-
-
 
 	</div>
 
@@ -369,40 +309,33 @@
 
 	</div>
 
-
-
-
-
-
 	<footer class="container py-5">
-		<div class="row">
-			<div class="col-2 col-lm">
-				<h5>
-					<a href="#">
-						About
-					</a>
-				</h5>
+		<div class="row footerRow">
+			<div class="col-2 col-xs">
+
+				<a class="footerItem" href="#">
+					About
+				</a>
+
 			</div>
-			<div class="col-2 col-lm">
-				<h5>
-					<a href="#">
-						About
-					</a>
-				</h5>
+			<div class="col-2 col-xs">
+
+				<a class="footerItem" href="#">
+					About
+				</a>
+
 			</div>
-			<div class="col-2 col-lm">
-				<h5>
-					<a href="#">
-						About
-					</a>
-				</h5>
+			<div class="col-2 col-xs">
+
+				<a class="footerItem" href="#">
+					About
+				</a>
+
 			</div>
-			<div class="col-2 col-lm">
-				<h5>
-					<a href="#">
-						About
-					</a>
-				</h5>
+			<div class="col-2 col-xs">
+
+				+7 999 999 99 99
+
 			</div>
 
 		</div>
