--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -15,7 +15,7 @@
 <body>
 
 	<header class="header">
-		<nav class="header_nav navbar navbar-expand-lg navbar-dark bg-dark ">
+		<nav class="header_nav navbar navbar-expand-lg navbar-dark bgColor">
 
 			<div class="container">
 
@@ -98,12 +98,14 @@
 				</div>
 			</div>
 		</nav>
+		<div class="header_content">
+
+		</div>
+
 	</header>
 
 
-	<div class="header_content">
 
-	</div>
 
 	<div class="carus">
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -126,8 +128,6 @@
 			</div>
 		</div>
 	</div>
-
-
 
 	<div class="galer">
 		<div class="album py-5 bg-light">
@@ -309,35 +309,37 @@
 
 	</div>
 
-	<footer class="container py-5">
-		<div class="row footerRow">
-			<div class="col-2 col-xs">
+	<footer class="py-5 footer">
+		<div class="container">
+			<div class="row footerRow">
+				<div class="col-2 col-xs">
 
-				<a class="footerItem" href="#">
-					About
-				</a>
+					<a class="footerItem" href="#">
+						About
+					</a>
+
+				</div>
+				<div class="col-2 col-xs">
+
+					<a class="footerItem" href="#">
+						About
+					</a>
+
+				</div>
+				<div class="col-2 col-xs">
+
+					<a class="footerItem" href="#">
+						About
+					</a>
+
+				</div>
+				<div class="col-2 col-xs">
+
+					+7 999 999 99 99
+
+				</div>
 
 			</div>
-			<div class="col-2 col-xs">
-
-				<a class="footerItem" href="#">
-					About
-				</a>
-
-			</div>
-			<div class="col-2 col-xs">
-
-				<a class="footerItem" href="#">
-					About
-				</a>
-
-			</div>
-			<div class="col-2 col-xs">
-
-				+7 999 999 99 99
-
-			</div>
-
 		</div>
 	</footer>
 
