--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -14,8 +14,12 @@
 
 <body>
 
+
+
+
+
 	<header class="header">
-		<nav class="header_nav navbar navbar-expand-lg navbar-dark bgColor">
+		<nav class="header_nav navbar navbar-expand-lg navbar-dark navColor">
 
 			<div class="container">
 
@@ -73,6 +77,7 @@
 
 								<div class="modal-body">
 									<form>
+
 										<div class="form-group row">
 											<label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
 											<div class="col-sm-10">
@@ -98,14 +103,11 @@
 				</div>
 			</div>
 		</nav>
-		<div class="header_content">
+		<div class="header_content headerColor">
 
 		</div>
 
 	</header>
-
-
-
 
 	<div class="carus">
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -129,8 +131,8 @@
 		</div>
 	</div>
 
-	<div class="galer">
-		<div class="album py-5 bg-light">
+	<div class="galer ">
+		<div class="album py-5 galerColor">
 
 			<div class="container">
 
@@ -252,7 +254,36 @@
 
 	</div>
 
-	<div class="customer">
+	<div class="form-blok">
+		<div class="container">
+			<form class="formBlok">
+
+				<div class="form-group row">
+
+					<label for="staticEmail" class="col-sm-10 col-form-label">
+						Email
+					</label>
+
+					<div class="col-sm-10 email">
+						<input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+					</div>
+
+				</div>
+
+				<div class="form-group">
+					<label for="exampleFormControlTextarea1">
+						Example textarea
+					</label>
+
+					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+			</form>
+		</div>
+	</div>
+
+
+
+
+	<div class="customer customerColor">
 
 		<div class="container ">
 
@@ -309,7 +340,7 @@
 
 	</div>
 
-	<footer class="py-5 footer">
+	<footer class="py-5 footerColor">
 		<div class="container">
 			<div class="row footerRow">
 				<div class="col-2 col-xs">
@@ -342,6 +373,11 @@
 			</div>
 		</div>
 	</footer>
+
+
+
+
+
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
