--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -258,24 +258,37 @@
 		<div class="container">
 			<form class="formBlok">
 
-				<div class="form-group row">
+				<div class="form-group">
 
-					<label for="staticEmail" class="col-sm-10 col-form-label">
-						Email
-					</label>
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="firstName">Ваше имя</label>
+							<input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+							<div class="invalid-feedback">
+								Valid first name is required.
+							</div>
+						</div>
 
-					<div class="col-sm-10 email">
-						<input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+						<div class="col-md-6 mb-3">
+							<label for="email">Ваш Email</label>
+							<input type="email" class="form-control" id="email" placeholder="you@example.com">
+							<div class="invalid-feedback">
+								Please enter a valid email address for shipping updates.
+							</div>
+						</div>
+
+						<div class="col-md-12 mb-3">
+
+							<label for="exampleFormControlTextarea1">Ваше сообщение</label>
+							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+
+						</div>
+
+						<button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
 					</div>
 
 				</div>
 
-				<div class="form-group">
-					<label for="exampleFormControlTextarea1">
-						Example textarea
-					</label>
-
-					<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 			</form>
 		</div>
 	</div>
