--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -119,13 +119,13 @@
 
 			<div class="carousel-inner heightImg">
 				<div class="carousel-item itemImg active ">
-					<img src="/Машины букеты/img/IMG-20201021-WA0002.jpg" class="d-block w-100 " alt="...">
+					<img src="/Машины букеты/img/IMG-20201021-WA0002.jpg" class="d-block w-100 border " alt="...">
 				</div>
 				<div class="carousel-item itemImg">
-					<img src="/Машины букеты/img/IMG-20201021-WA0004.jpg" class="d-block w-100 " alt="...">
+					<img src="/Машины букеты/img/IMG-20201021-WA0004.jpg" class="d-block w-100 border" alt="...">
 				</div>
 				<div class="carousel-item itemImg">
-					<img src="/Машины букеты/img/IMG-20201021-WA0006.jpg" class="d-block w-100 " alt="...">
+					<img src="/Машины букеты/img/IMG-20201021-WA0006.jpg" class="d-block w-100 border" alt="...">
 				</div>
 			</div>
 		</div>
