настроил задний фон

--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -259,7 +259,9 @@
 			<form class="formBlok">
 
 				<div class="form-group">
-
+					<div class="formGroup_title">
+						<h4 class="">Сделай заказ прямо сейчас!</h4>
+					</div>
 					<div class="row">
 						<div class="col-md-6 mb-3">
 							<label for="firstName">Ваше имя</label>
@@ -284,7 +286,7 @@
 
 						</div>
 
-						<button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+						<button class="btn btn-primary btn-lg btn-block" type="submit">Отправить</button>
 					</div>
 
 				</div>
@@ -356,6 +358,7 @@
 	<footer class="py-5 footerColor">
 		<div class="container">
 			<div class="row footerRow">
+
 				<div class="col-2 col-xs">
 
 					<a class="footerItem" href="#">
@@ -363,6 +366,7 @@
 					</a>
 
 				</div>
+
 				<div class="col-2 col-xs">
 
 					<a class="footerItem" href="#">
@@ -370,17 +374,16 @@
 					</a>
 
 				</div>
-				<div class="col-2 col-xs">
 
-					<a class="footerItem" href="#">
-						About
+				<div class="col-2 col-xs">
+					<a class="footerItem" href="#"> About
 					</a>
-
 				</div>
-				<div class="col-2 col-xs">
 
-					+7 999 999 99 99
-
+				<div class="col-3 col-xs">
+					<a class="footerItem" href="#">
+						+7 999 999 99 99
+					</a>
 				</div>
 
 			</div>
