настраиваю новую лаллерею

--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -131,6 +131,80 @@
 		</div>
 	</div>
 
+
+	<div class="gals">
+		<div class="container">
+			<div class="mySlides">
+				<div class="numbertext">1 / 6</div>
+				<img src="/Машины букеты/img/IMG-20201021-WA0006.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">2 / 6</div>
+				<img src="/Машины букеты/img/IMG-20201021-WA0004.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">3 / 6</div>
+				<img src="/Машины букеты/img/IMG-20201021-WA0003.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">4 / 6</div>
+				<img src="/Машины букеты/img/IMG-20201021-WA0002.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">5 / 6</div>
+				<img src="/Машины букеты/img/IMG-20201021-WA0007.jpg" style="width:100%">
+			</div>
+
+			<div class="mySlides">
+				<div class="numbertext">6 / 6</div>
+				<img src="/Машины букеты/img/IMG-20201021-WA0016.jpg" style="width:100%">
+			</div>
+
+			<a class="prev" onclick="plusSlides(-1)">❮</a>
+			<a class="next" onclick="plusSlides(1)">❯</a>
+
+			<div class="caption-container">
+				<p id="caption"></p>
+			</div>
+
+			<div class="rov">
+				<div class="column">
+					<img class="demo cursor" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" style="width:100%"
+						onclick="currentSlide(1)" alt="The Woods">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="/Машины букеты/img/IMG-20201021-WA0004.jpg" style="width:100%"
+						onclick="currentSlide(2)" alt="Cinque Terre">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="/Машины букеты/img/IMG-20201021-WA0003.jpg" style="width:100%"
+						onclick="currentSlide(3)" alt="Mountains and fjords">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" style="width:100%"
+						onclick="currentSlide(4)" alt="Northern Lights">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="/Машины букеты/img/IMG-20201021-WA0007.jpg" style="width:100%"
+						onclick="currentSlide(5)" alt="Nature and sunrise">
+				</div>
+				<div class="column">
+					<img class="demo cursor" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" style="width:100%"
+						onclick="currentSlide(6)" alt="Snowy Mountains">
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
 	<div class="galer ">
 		<div class="album py-5 galerColor">
 
@@ -295,9 +369,6 @@
 		</div>
 	</div>
 
-
-
-
 	<div class="customer customerColor">
 
 		<div class="container ">
@@ -394,7 +465,7 @@
 
 
 
-
+	<script src="/Машины букеты/js/main.js"></script>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
