Портфолио в виде модельных окон

--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -127,122 +127,137 @@
 		<div class="album py-5 galerColor">
 
 			<div class="container">
-				<div class="galerModal_1">
-					<!-- Button trigger modal -->
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-						Launch static backdrop modal
-					</button>
+				<div class="galerRow row">
+					<div class="galerModal_1 m-2 col-lm-4">
+						<!-- Button trigger modal -->
+						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+							Launch static backdrop modal
+						</button>
 
-					<!-- Modal -->
-					<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
-						aria-labelledby="staticBackdropLabel" aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
+						<!-- Modal -->
+						<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
+							aria-labelledby="staticBackdropLabel" aria-hidden="true">
+							<div class="modal-dialog modal-dialog-scrollable">
+								<div class="modal-content">
+
+									<div class="modal-header">
+										<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+									</div>
+
+									<div class="modal-body">
+										<div class="galerImg_modal">
+											<img class="col-md-4 ml-auto" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+
+										</div>
+									</div>
+
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+									</div>
 								</div>
-								<div class="modal-body">
-									...
+							</div>
+						</div>
+					</div>
+					<div class="galerModal_2 m-2 col-lm-4">
+						<!-- Button trigger modal -->
+						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2">
+							Launch static backdrop modal
+						</button>
+
+						<!-- Modal -->
+						<div class="modal fade" id="staticBackdrop2" data-backdrop="static" data-keyboard="false"
+							tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+							<div class="modal-dialog modal-dialog-scrollable">
+								<div class="modal-content">
+
+									<div class="modal-header">
+										<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+									</div>
+
+									<div class="modal-body">
+										<div class="galerImg_modal">
+											<img class="col-md-4 ml-auto" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+										</div>
+									</div>
+
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+									</div>
 								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Understood</button>
+							</div>
+						</div>
+					</div>
+					<div class="galerModal_3 m-2 col-lm-4">
+						<!-- Button trigger modal -->
+						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop3">
+							Launch static backdrop modal
+						</button>
+
+						<!-- Modal -->
+						<div class="modal fade" id="staticBackdrop3" data-backdrop="static" data-keyboard="false"
+							tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+							<div class="modal-dialog modal-dialog-scrollable">
+								<div class="modal-content">
+
+									<div class="modal-header">
+										<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+									</div>
+
+									<div class="modal-body">
+										<div class="galerImg_modal">
+											<img class="col-md-4 ml-auto" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+
+										</div>
+									</div>
+
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				<div class="galerModal_2">
-					<!-- Button trigger modal -->
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-						Launch static backdrop modal
-					</button>
-
-					<!-- Modal -->
-					<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
-						aria-labelledby="staticBackdropLabel" aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<div class="modal-body">
-									...
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Understood</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="galerModal_3">
-					<!-- Button trigger modal -->
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-						Launch static backdrop modal
-					</button>
-
-					<!-- Modal -->
-					<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
-						aria-labelledby="staticBackdropLabel" aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<div class="modal-body">
-									...
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Understood</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="galerModal_4">
-					<!-- Button trigger modal -->
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
-						Launch static backdrop modal
-					</button>
-
-					<!-- Modal -->
-					<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
-						aria-labelledby="staticBackdropLabel" aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<div class="modal-body">
-									...
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Understood</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
 			</div>
 
 		</div>
