--- a/Машины букеты/index.html
+++ b/Машины букеты/index.html
@@ -74,7 +74,6 @@
 								<div class="modal-body">
 
 									<form id="form">
-
 										<div class="row">
 
 
@@ -88,43 +87,16 @@
 											<input type="text" name="Name" placeholder="You name..." required><br>
 											<input type="text" name="E-mail" placeholder="You E-mail..." required><br>
 											<input type="text" name="Phone" placeholder="You phone..."><br>
-											<button>Send</button>
+											<button>Отправить</button>
 
-
-											<!-- <div class="col-md-6 mb-3">
-												<label for="firstName">Ваше имя</label>
-												<input type="text" class="form-control" id="firstName" placeholder="" value=""
-													required="">
-												<div class="invalid-feedback">
-													Valid first name is required.
-												</div>
-											</div>
-
-											<div class="col-md-6 mb-3">
-												<label for="email">Ваш Email</label>
-												<input type="email" class="form-control" id="email" placeholder="you@example.com">
-												<div class="invalid-feedback">
-													Please enter a valid email address for shipping updates.
-												</div>
-											</div>
-
-											<div class="col-md-12 mb-3">
-
-												<label for="exampleFormControlTextarea1">Ваше сообщение</label>
-												<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea> -->
 
 										</div>
-
 									</form>
+
 								</div>
-								<!-- <div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-									<button type="button" class="btn btn-primary">Save changes</button>
-								</div> -->
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</nav>
@@ -291,30 +263,19 @@
 						<h3 class="">Сделай заказ прямо сейчас!</h3>
 					</div>
 					<div class="row">
-						<div class="col-md-6 mb-3">
-							<label for="firstName">Ваше имя</label>
-							<input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
-							<div class="invalid-feedback">
-								Valid first name is required.
-							</div>
-						</div>
+						<form action="/Машины букеты/php/main.php" method="POST">
+							<fieldset>
+								<legend>Ваше сообщение</legend>
+								Ваше имя:
+								<input type="text" name="name">
+								E-mail:
+								<input type="text" name="name">
+								Номер телефона:
+								<textarea name="massage" cols="45" rows="10"></textarea>
+								<input type="submit" value="Отправить сообщение">
+							</fieldset>
+						</form>
 
-						<div class="col-md-6 mb-3">
-							<label for="email">Ваш Email</label>
-							<input type="email" class="form-control" id="email" placeholder="you@example.com">
-							<div class="invalid-feedback">
-								Please enter a valid email address for shipping updates.
-							</div>
-						</div>
-
-						<div class="col-md-12 mb-3">
-
-							<label for="exampleFormControlTextarea1">Ваше сообщение</label>
-							<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-
-						</div>
-
-						<button class="btn btnForm btn-primary btn-lg btn-block" type="submit">Отправить</button>
 					</div>
 
 				</div>
@@ -414,10 +375,6 @@
 			</div>
 		</div>
 	</footer>
-
-
-
-
 
 	<script src="/Машины букеты/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
