--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
 		integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="/Машины букеты/css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Машины сладкие букеты</title>
 </head>
 
@@ -20,7 +20,7 @@
 			<div class="container">
 
 				<a class="logo navbar-brand" href="#">
-					<img class="nav_logo" src="/Машины букеты/img/IMG-20201021-WA0026 copy.jpg" alt="Logo">
+					<img class="nav_logo" src="/img/IMG-20201021-WA0026 copy.jpg" alt="Logo">
 					Машины сладкие букеты
 				</a>
 
@@ -107,7 +107,7 @@
 	</header>
 
 	<a class="btn" id="top">
-		<img src="/Машины букеты/img/001-upwards-arrow.svg" alt="">
+		<img src="/img/001-upwards-arrow.svg" alt="">
 	</a>
 
 	<div class="galer" id="galer">
