--- a/index.html
+++ b/index.html
@@ -110,6 +110,212 @@
 		<img src="/img/001-upwards-arrow.svg" alt="">
 	</a>
 
+
+
+	<div class="gal">
+		<div class="container-fluid">
+
+			<section class="row align-items-stretch photos" id="section-photos">
+				<div class="col-12">
+					<div class="row align-items-stretch">
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
+							<a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_4.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_5.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_1.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
+							<a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_2.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_3.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_6.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up">
+							<a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_7.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_8.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_9.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+							<a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_10.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_1.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_2.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+							<a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_3.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_4.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_5.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up">
+							<a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_6.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_7.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_8.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_9.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
+							<a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_4.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+						<div class="col-6 col-md-6 col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="200">
+							<a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
+								<img src="images/img_5.jpg" alt="Image" class="img-fluid">
+								<div class="photo-text-more">
+									<span class="icon icon-search"></span>
+								</div>
+							</a>
+						</div>
+
+
+
+					</div>
+
+				</div>
+			</section> <!-- #section-photos -->
+
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
 	<div class="galer" id="galer">
 		<div class="album py-5 galerColor">
 
@@ -138,17 +344,17 @@
 
 									<div class="modal-body">
 										<div class="galerImg_modal">
-											<img class="col-md-4 ml-auto" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+											<img class="col-md-4 ml-auto" src="/img/IMG-20201021-WA0002.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0002.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0002.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0002.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0002.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0002.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0002.jpg" alt="">
 
 										</div>
 									</div>
@@ -181,17 +387,17 @@
 
 									<div class="modal-body">
 										<div class="galerImg_modal">
-											<img class="col-md-4 ml-auto" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4 ml-auto" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
 										</div>
 									</div>
@@ -224,17 +430,17 @@
 
 									<div class="modal-body">
 										<div class="galerImg_modal">
-											<img class="col-md-4 ml-auto" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4 ml-auto" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
-											<img class="col-md-4" src="/Машины букеты/img/IMG-20201021-WA0016.jpg" alt="">
+											<img class="col-md-4" src="/img/IMG-20201021-WA0016.jpg" alt="">
 
 										</div>
 									</div>
@@ -292,7 +498,7 @@
 				<div class="col-lg-4">
 
 					<div class="customerAva">
-						<img class="Ava" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" alt="Ava">
+						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
 					</div>
 
 					<h2>Heading</h2>
@@ -305,7 +511,7 @@
 				<div class="col-lg-4">
 
 					<div class="customerAva">
-						<img class="Ava" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" alt="Ava">
+						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
 					</div>
 
 					<h2>Heading</h2>
@@ -318,7 +524,7 @@
 				<div class="col-lg-4">
 
 					<div class="customerAva">
-						<img class="Ava" src="/Машины букеты/img/IMG-20201021-WA0006.jpg" alt="Ava">
+						<img class="Ava" src="/img/IMG-20201021-WA0006.jpg" alt="Ava">
 					</div>
 
 					<h2>Heading</h2>
@@ -374,7 +580,7 @@
 		</div>
 	</footer>
 
-	<script src="/Машины букеты/js/main.js"></script>
+	<script src="/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script>
